crates/math-core/tests/snapshots/conversion_test__xLeftrightarrow.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\xLeftrightarrow{x}"
---
<math>
    <mrow>
        <mspace width="0.2777778em"/>
        <mover>
            <mo lspace="0" rspace="0">⇔</mo>
            <mover>
                <mrow>
                    <mspace width="0.4286em"/>
                    <mi>x</mi>
                    <mspace width="0.4286em"/>
                </mrow>
                <mspace width="3.5em"/>
            </mover>
        </mover>
        <mspace width="0.2777778em"/>
    </mrow>
</math>
